# rectpack2D

./: CMakeLists.txt  README.md  rectpack2D.pc.in  rectpack2DConfig.cmake.in  rectpack2DTargets.cmake
example/: CMakeLists.txt  main.cpp
include/rectpack2D/: empty_spaces.h  rect_structs.h
src/: rect_structs.h
